# elyhub

./: .gitignore  AGENT_BRIEF.md  ARCHITECTURE.md  CHANGELOG.md  RELEASE.md  build.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
server/: BOT_MEMBERS_SYNC.md  KASSA_INTEGRATION.md  SETUP.md  package-lock.json  package.json  r2-cors.json  tsconfig.json  wrangler.toml
server/schema/: 001_initial.sql  002_kassa.sql  003_license_keys.sql  004_github_releases.sql  005_messages.sql
server/scripts/: apply-schema.mjs  seed-listing.mjs  test-admin.sh
server/src/: auth.ts  db.ts  index.ts  r2.ts  types.ts
server/src/lib/: github-releases.ts  kassa-cron.ts  kassa-licensing.ts
server/src/routes/: admin.ts  auth.ts  downloads.ts  listings.ts  maker.ts  me.ts  members.ts  messages.ts  pairing.ts  reviews.ts  uploads.ts  users.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: build.test.mjs  i18n.test.mjs  notify.test.mjs  parse.test.mjs  smoke.test.mjs
