[package]
name = "elyhub"
version = "0.1.0"
description = "ElyHub desktop — Ely community home"
authors = ["Camara"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "elyhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# Auto-update OTA. The plugin checks the manifest URL set in tauri.conf.json
# (`plugins.updater.endpoints`), downloads the platform-matching artifact,
# verifies it against TAURI_SIGNING_PUBLIC_KEY, and applies. Without the
# key the updater refuses to install — defends against a poisoned mirror.
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
